--- a/.github/workflows/md-lint.yml
+++ b/.github/workflows/md-lint.yml
@@ -14,4 +14,4 @@ jobs:
       - name: Lint markdown files
         uses: avto-dev/markdown-lint@v1.5.0
         with:
-          files: README.md
+          args: README.md
