--- a/.github/workflows/ros_test.yml
+++ b/.github/workflows/ros_test.yml
@@ -18,5 +18,6 @@ jobs:
       - uses: actions/checkout@v2
       - uses: hoverkraft-tech/compose-action@v2.0.1
         with:
+          compose-file: ./docker-compose.yaml
           services: base
           
