--- a/.github/workflows/ros_test.yml
+++ b/.github/workflows/ros_test.yml
@@ -16,8 +16,12 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-      - uses: hoverkraft-tech/compose-action@v2.0.1
+      - name: Build and start docker 
+        uses: hoverkraft-tech/compose-action@v2.0.1
         with:
           compose-file: ./docker-compose.yaml
           services: base
-          
+      - name: Run tests
+        run: |
+          docker compose exec colcon test
+          docker compose exec colcon test-result
