--- a/.github/workflows/ros_test.yml
+++ b/.github/workflows/ros_test.yml
@@ -23,5 +23,6 @@ jobs:
           services: base
       - name: Run tests
         run: |
+          docker compose exec base colcon build
           docker compose exec base colcon test
           docker compose exec base colcon test-result
