all yaml based world
Signed-off-by: Christian Henkel <christian.henkel2@de.bosch.com>

--- a/delib_ws_p2/data/world.yaml
+++ b/delib_ws_p2/data/world.yaml
@@ -1,3 +1,12 @@
+robots:
+  - name: robot
+    radius: 0.1
+    location: dining_room
+    path_executor:
+      type: constant_velocity
+    path_planner:
+      type: rrt
+
 rooms:
   - name: banana_farm
     footprint:
@@ -27,3 +36,18 @@ hallways:
     conn_method: auto
     is_open: false
     is_locked: false
+
+locations:
+  - name: table_source
+    parent: banana_farm
+    category: table
+    coords: [-1.5, 0.5]
+  - name: table_sink
+    parent: dining_room
+    category: table
+    coords: [1.5, 0.5]
+
+objects:
+  - parent: table_source
+    category: banana
+    coords: [-1.5, 0.5]
