--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -30,7 +30,7 @@ repos:
 
   # Autoformats Python code.
   - repo: https://github.com/psf/black.git
-    rev: 24.4.2
+    rev: 24.8.0
     hooks:
       - id: black
 
@@ -49,7 +49,7 @@ repos:
           [
             "--no-warnings",
             "--config-data",
-            "{extends: default, rules: {line-length: disable, braces: {max-spaces-inside: 1}}}",
+            "{extends: default, rules: {line-length: disable, braces: {max-spaces-inside: 1}, indentation: disable}}",
           ]
         types: [text]
         files: \.(yml|yaml)$
