--- a/delib_ws_p1_py/package.xml
+++ b/delib_ws_p1_py/package.xml
@@ -1,13 +1,13 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>delib_ws_p1</name>
+  <name>delib_ws_p1_py</name>
   <version>1.0.0</version>
-  <description>Problem 1 of the ROSCon24 Deliberation Workshop</description>
+  <description>Solution for problem 1 of the ROSCon24 Deliberation Workshop</description>
   <maintainer email="christian.henkel2@de.bosch.com">Christian Henkel</maintainer>
   <license>Apache-2.0</license>
 
-  <depend>pyrobosim_ros</depend>
+  <depend>rclpy</depend>
   <depend>problem_interface</depend>
 
   <test_depend>ament_copyright</test_depend>
