--- a/problem_interface/package.xml
+++ b/problem_interface/package.xml
@@ -1,14 +1,14 @@
 <?xml version="1.0"?>
 <?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
 <package format="3">
-  <name>delib_ws_p1</name>
-  <version>1.0.0</version>
-  <description>Problem 1 of the ROSCon24 Deliberation Workshop</description>
-  <maintainer email="christian.henkel2@de.bosch.com">Christian Henkel</maintainer>
+  <name>problem_interface</name>
+  <version>0.0.0</version>
+  <description>TODO: Package description</description>
+  <maintainer email="christian.henkel2@de.bosch.com">hec2le</maintainer>
   <license>Apache-2.0</license>
 
-  <depend>pyrobosim_ros</depend>
-  <depend>problem_interface</depend>
+  <depend>rclpy</depend>
+  <depend>pyrobosim_msgs</depend>
 
   <test_depend>ament_copyright</test_depend>
   <test_depend>ament_flake8</test_depend>
