--- a/.github/workflows/ros_test.yml
+++ b/.github/workflows/ros_test.yml
@@ -15,7 +15,9 @@ jobs:
       fail-fast: false
     runs-on: ubuntu-latest
     steps:
-      - uses: actions/checkout@v2
+      - uses: actions/checkout@v4
+        with:
+          submodules: true
       - name: Build and start docker
         uses: hoverkraft-tech/compose-action@v2.0.1
         with:
