--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -20,9 +20,11 @@ WORKDIR /delib_ws
 COPY dependencies src/dependencies
 RUN source /opt/ros/jazzy/setup.bash && \
     rosdep install --from-paths src -y --ignore-src
+# pyrobosim
 ENV PIP_BREAK_SYSTEM_PACKAGES=1
-RUN cd src/dependencies/pyrobosim && \
-    pip3 install -e ./pyrobosim
+RUN pip3 install -e src/dependencies/pyrobosim/pyrobosim
+# SkiROS2
+RUN src/dependencies/SkiROS2/skiros2/skiros2/scripts/install_fd_task_planner.sh
 
 # Remove MatPlotLib display warnings.
 RUN mkdir /tmp/runtime-root
