Install more libs needed by FlexBE web UI

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -10,7 +10,8 @@ RUN apt-get update && \
     apt-get install -y \
     apt-utils python3-pip python3-tk python3-wrapt python3-inflection \
     libegl1 libgl1-mesa-dev libglu1-mesa-dev '^libxcb.*-dev' libx11-xcb-dev \
-    libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libxrender-dev
+    libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libxrender-dev \
+    libnss3 libasound2t64 libxkbfile1
 
 # Create a ROS 2 workspace.
 RUN mkdir -p /delib_ws/src/
