--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -5,9 +5,10 @@ SHELL ["/bin/bash", "-o", "pipefail", "-c"]
 
 # Install dependencies
 ARG DEBIAN_FRONTEND=noninteractive
-RUN apt-get update && apt-get upgrade -y
-RUN apt-get install -y \
-    apt-utils python3-pip python3-tk \
+RUN apt-get update && \
+    apt-get upgrade -y && \
+    apt-get install -y \
+    apt-utils python3-pip python3-tk python3-wrapt python3-inflection \
     libegl1 libgl1-mesa-dev libglu1-mesa-dev '^libxcb.*-dev' libx11-xcb-dev \
     libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libxrender-dev
 
@@ -19,8 +20,11 @@ WORKDIR /delib_ws
 COPY dependencies src/dependencies
 RUN source /opt/ros/jazzy/setup.bash && \
     rosdep install --from-paths src -y --ignore-src
+# Aggregated Python dependencies
 COPY python-requirements.txt /delib_ws
 RUN pip3 install --break-system-packages -r python-requirements.txt
+# SkiROS2 dependencies
+RUN src/dependencies/SkiROS2/skiros2/skiros2/scripts/install_fd_task_planner.sh
 
 # Remove MatPlotLib display warnings.
 RUN mkdir /tmp/runtime-root
