--- a/delib_ws_worlds/worlds/world1.yaml
+++ b/delib_ws_worlds/worlds/world1.yaml
@@ -19,136 +19,183 @@ robots:
       type: rrt
       rrt_star: true
       max_connection_dist: 1.0
-      rewire_radius: 1.5
+      rewire_radius: 1.0
       max_time: 3.0
 
 rooms:
+  - name: dining
+    footprint:
+      type: polygon
+      coords:
+        - [-1.6, -1.0]
+        - [1.6, -1.0]
+        - [1.6, 1.0]
+        - [-1.6, 1.0]
+    wall_width: 0.2
+    color: [0, 1, 0]
+
   - name: kitchen
     footprint:
       type: polygon
       coords:
-        - [0, 0]
-        - [3, 0]
-        - [3, 2]
-        - [0, 2]
+        - [-4, -3]
+        - [-0.5, -3]
+        - [-0.5, -1.75]
+        - [-2.25, -1.75]
+        - [-2.25, -0.5]
+        - [-4, -0.5]
     wall_width: 0.2
     color: [1, 0, 0]
-  - name: dining_room
-    footprint:
-      type: polygon
-      coords:
-        - [4, 0]
-        - [7, 0]
-        - [7, 2]
-        - [4, 2]
-    wall_width: 0.2
-    color: [0, 1, 0]
+
   - name: trash_room
     footprint:
       type: polygon
       coords:
-        - [0, 3]
-        - [3, 3]
-        - [3, 5]
-        - [0, 5]
+        - [-4, 0.5]
+        - [-2.25, 0.5]
+        - [-2.25, 1.75]
+        - [-0.5, 1.75]
+        - [-0.5, 3]
+        - [-4, 3]
     wall_width: 0.2
-    color: [0.5, 0.5, 0.5]
+    color: [0.1, 0.1, 0.1]
+
   - name: closet
     footprint:
       type: polygon
       coords:
+        - [0.5, 1.75]
+        - [2.25, 1.75]
+        - [2.25, 0.5]
+        - [4, 0.5]
         - [4, 3]
-        - [4, 5]
-        - [7, 5]
-        - [7, 3]
+        - [0.5, 3]
     wall_width: 0.2
-    color: [0.7, 0.4, 0.4]
+    color: [0.7, 0.4, 0.5]
+
   - name: office
     footprint:
       type: polygon
       coords:
-        - [8, 0]
-        - [10, 0]
-        - [10, 5]
-        - [8, 5]
+        - [0.5, -3]
+        - [4, -3]
+        - [4, -0.5]
+        - [2.25, -0.5]
+        - [2.25, -1.75]
+        - [0.5, -1.75]
     wall_width: 0.2
     color: [0.0, 0.0, 1.0]
 
 hallways:
-  - room_start: kitchen
-    room_end: dining_room
-    width: 0.75
-    conn_method: auto
+  - room_start: dining
+    room_end: office
+    width: 0.6
+    conn_method: angle
+    conn_angle: -1.57
+    offset: 1.1
+    is_open: true
+    is_locked: false
+
+  - room_start: dining
+    room_end: closet
+    width: 0.6
+    conn_method: angle
+    conn_angle: 1.57
+    offset: -1.1
+    is_open: false
+    is_locked: false
+
+  - room_start: dining
+    room_end: trash_room
+    width: 0.6
+    conn_method: angle
+    conn_angle: 1.57
+    offset: 1.1
+    is_open: false
+    is_locked: false
+
+  - room_start: dining
+    room_end: kitchen
+    width: 0.6
+    conn_method: angle
+    conn_angle: -1.57
+    offset: -1.1
     is_open: true
     is_locked: false
 
   - room_start: kitchen
     room_end: trash_room
-    width: 0.75
-    conn_method: auto
+    width: 0.8
+    conn_method: angle
+    conn_angle: 1.57
+    offset: 0.6
     is_open: true
     is_locked: false
 
-  - room_start: dining_room
-    room_end: closet
-    width: 0.75
-    conn_method: auto
+  - room_start: kitchen
+    room_end: office
+    width: 0.8
+    conn_method: angle
+    conn_angle: 0.0
+    offset: -0.5
     is_open: false
     is_locked: false
 
-  - room_start: dining_room
-    room_end: office
-    width: 0.75
+  - room_start: closet
+    room_end: trash_room
+    width: 0.8
     conn_method: angle
-    conn_angle: 0.0
-    is_open: true
+    conn_angle: 3.14
+    offset: -0.5
+    is_open: false
     is_locked: false
 
   - room_start: closet
     room_end: office
-    width: 0.75
+    width: 0.8
     conn_method: angle
-    conn_angle: 0.0
+    conn_angle: -1.57
+    offset: 0.6
     is_open: false
     is_locked: false
 
 locations:
-    - name: dining_table
-      parent: dining_room
+    - name: table
+      parent: dining
       category: table
-      pose: [5.5, 0.75]
+      pose: [0.0, 0.15]
 
-    - name: office_desk
+    - name: desk
       parent: office
       category: desk
-      pose: [9.65, 3.0]
+      pose: [3.6, -2.3]
 
     - name: fridge
       parent: kitchen
       category: storage
-      pose: [1.5, 0.4]
+      pose: [-3, -2.65]
       is_open: true
 
     - name: pantry
       parent: kitchen
       category: storage
-      pose: [0.4, 1.25, 0.0, 1.57]
+      pose: [-3.65, -1.5, 0.0, 1.57]
       is_open: true
 
-    - name: office_trash
+    - name: bin
       parent: office
       category: trashcan_small
-      pose: [9.5, 0.5]
+      pose: [2.6, -0.85]
 
     - name: dumpster
       parent: trash_room
       category: trashcan_large
-      pose: [2.4, 4.4]
+      pose: [-3.4, 2.4]
 
     - name: charger
       parent: closet
       category: charger
-      pose: [5.5, 4.75]
+      pose: [3.5, 2.5, 0, -0.785]
 
 objects:
   - parent: pantry
@@ -163,8 +210,8 @@ objects:
   - parent: fridge
     category: butter
 
-  - parent: office_desk
+  - parent: desk
     category: garbage
 
-  - parent: office_desk
+  - parent: bin
     category: garbage
