--- a/delib_ws_worlds/worlds/object_data.yaml
+++ b/delib_ws_worlds/worlds/object_data.yaml
@@ -26,8 +26,8 @@ butter:
     dims: [0.1, 0.15]
   color: [0.6, 0.6, 0.0]
 
-garbage:
+waste:
   footprint:
     type: circle
-    radius: 0.08
+    radius: 0.075
   color: [0.3, 0.5, 0.1]
