--- a/delib_ws_worlds/worlds/world3.yaml
+++ b/delib_ws_worlds/worlds/world3.yaml
@@ -6,7 +6,7 @@ metadata:
    objects: $PWD/object_data.yaml
 
 params:
-  name: problem3
+  name: delib_ws_problem_3
   inflation_radius: 0.01
   object_radius: 0.01
 
