Add charger metadata and fix Problem 4 solution

--- a/delib_ws_worlds/worlds/world3.yaml
+++ b/delib_ws_worlds/worlds/world3.yaml
@@ -213,6 +213,7 @@ locations:
       parent: closet
       category: charger
       pose: [3.5, 2.5, 0, -0.785]
+      is_charger: true
 
 objects:
   - parent: pantry
