--- a/delib_ws_worlds/worlds/location_data.yaml
+++ b/delib_ws_worlds/worlds/location_data.yaml
@@ -1,17 +1,104 @@
-#############################
-# Example location metadata #
-#############################
+#####################
+# Location metadata #
+#####################
 
 table:
   footprint:
     type: box
-    dims: [0.6, 0.6]
+    dims: [1.2, 0.8]
     height: 0.5
   nav_poses:
-    - [0, -0.4, 1.57]
+    - [0, 0.65, -1.57]  # above
+    - [0, -0.65, 1.57]  # below
+    - [-0.85, 0, 0.0]  # left
+    - [0.85, 0, 3.14]  # right
   locations:
     - name: "tabletop"
       footprint:
         type: parent
-        padding: 0.1
+        padding: 0.05
   color: [0.2, 0.2, 0.2]
+
+desk:
+  footprint:
+    type: box
+    dims: [0.6, 1.2]
+    height: 0.5
+  nav_poses:
+    - [-0.5, 0, 0.0]  # left
+    - [0.5, 0, 3.14]  # right
+  locations:
+    - name: "desktop"
+      footprint:
+        type: parent
+        padding: 0.05
+  color: [0.5, 0.2, 0.2]
+
+storage:
+  footprint:
+    type: box
+    dims: [1.0, 0.6]
+    height: 0.5
+  nav_poses:
+    - [0, 0.55, -1.57]  # above
+    - [0, -0.55, 1.57]  # below
+  locations:
+    - name: "storage"
+      footprint:
+        type: parent
+        padding: 0.05
+  color: [0.2, 0.5, 0.2]
+
+trashcan_small:
+  footprint:
+    type: circle
+    radius: 0.25
+    height: 0.5
+  nav_poses:
+    - [0, 0.5, -1.57]  # above
+    - [0, -0.5, 1.57]  # below
+    - [-0.5, 0, 0.0]  # left
+    - [0.5, 0, 3.14]  # right
+  locations:
+    - name: "disposal"
+      footprint:
+        type: parent
+        padding: 0.05
+  color: [0.1, 0.1, 0.1]
+
+trashcan_large:
+  footprint:
+    type: circle
+    radius: 0.525
+    height: 0.5
+  nav_poses:
+    - [0, 0.75, -1.57]  # above
+    - [0, -0.75, 1.57]  # below
+    - [-0.75, 0, 0.0]  # left
+    - [0.75, 0, 3.14]  # right
+  locations:
+    - name: "disposal"
+      footprint:
+        type: parent
+        padding: 0.05
+  color: [0.1, 0.1, 0.1]
+
+charger:
+  footprint:
+    type: polygon
+    coords:
+      - [-0.5, -0.2]
+      - [0.5, -0.2]
+      - [0.5, 0.2]
+      - [-0.5, 0.2]
+    height: 0.1
+  locations:
+    - name: "dock"
+      footprint:
+        type: parent
+      nav_poses:
+        - [0, -0.4, 1.57]
+        - [-0.7, 0, 0]
+        - [0, 0.4, -1.57]
+        - [0.7, 0, 3.14]
+  color: [0.4, 0.4, 0]
