--- a/delib_ws_worlds/worlds/object_data.yaml
+++ b/delib_ws_worlds/worlds/object_data.yaml
@@ -1,9 +1,33 @@
-###########################
-# Example object metadata #
-###########################
+###################
+# Object metadata #
+###################
 
-banana:
+bread:
   footprint:
     type: box
-    dims: [0.05, 0.2]
-  color: [0.7, 0.7, 0]
+    dims: [0.15, 0.2]
+  color: [0.7, 0.5, 0]
+
+snacks:
+  footprint:
+    type: box
+    dims: [0.12, 0.15]
+  color: [0.0, 0.0, 0.6]
+
+soda:
+  footprint:
+    type: box
+    dims: [0.12, 0.15]
+  color: [0.8, 0.0, 0.0]
+
+butter:
+  footprint:
+    type: box
+    dims: [0.1, 0.15]
+  color: [0.6, 0.6, 0.0]
+
+waste:
+  footprint:
+    type: circle
+    radius: 0.075
+  color: [0.3, 0.5, 0.1]
