--- a/delib_ws_worlds/worlds/world3.yaml
+++ b/delib_ws_worlds/worlds/world3.yaml
@@ -1,92 +1,235 @@
 # Problem 3 World
-#
-# __Goal__:
-# - Banana on table_sink.
-#
-# __Initial State__:
-# - Banana on table_source.
-# - Door closed
-#
-# __Available Actions__:
-# - Pick object
-# - Place object
-# - Move robot
-# - Open door
-# - Close door
-#
-# __Available Conditions__:
-# - Robot location
-#     dining_room, banana_farm
-# - Object location
-#     table_sink, table_source
-# - Object in hand
-#     true, false
+# Adds detection and action success probability.
 
 metadata:
    locations: $PWD/location_data.yaml
    objects: $PWD/object_data.yaml
 
+params:
+  name: delib_ws_problem_3
+  inflation_radius: 0.01
+  object_radius: 0.01
+
 robots:
   - name: robot
     radius: 0.1
-    location: dining_room
+    location: dining
     path_executor:
       type: constant_velocity
     path_planner:
       type: rrt
       rrt_star: true
+      max_connection_dist: 1.0
+      rewire_radius: 1.0
+      max_time: 3.0
     action_execution_options:
       navigate:
         success_probability: 0.9
         rng_seed: 42
-        battery_usage: 0
       pick:
         success_probability: 0.5
-        battery_usage: 0
       place:
-        battery_usage: 0
+        success_probability: 0.5
+      open:
+        success_probability: 0.75
+      close:
+        success_probability: 0.75
+      detect:
+        success_probability: 0.8
 
 rooms:
-  - name: banana_farm
+  - name: dining
     footprint:
       type: polygon
       coords:
-        - [-2, 1]
-        - [-1, 1]
-        - [-1, -1]
-        - [-2, -1]
-    wall_width: 0.2
-    color: [1, 0, 0]
-  - name: dining_room
-    footprint:
-      type: polygon
-      coords:
-        - [2, 1]
-        - [1, 1]
-        - [1, -1]
-        - [2, -1]
+        - [-1.6, -1.0]
+        - [1.6, -1.0]
+        - [1.6, 1.0]
+        - [-1.6, 1.0]
     wall_width: 0.2
     color: [0, 1, 0]
 
+  - name: kitchen
+    footprint:
+      type: polygon
+      coords:
+        - [-4, -3]
+        - [-0.5, -3]
+        - [-0.5, -1.75]
+        - [-2.25, -1.75]
+        - [-2.25, -0.5]
+        - [-4, -0.5]
+    wall_width: 0.2
+    color: [1, 0, 0]
+
+  - name: trash
+    footprint:
+      type: polygon
+      coords:
+        - [-4, 0.5]
+        - [-2.25, 0.5]
+        - [-2.25, 1.75]
+        - [-0.5, 1.75]
+        - [-0.5, 3]
+        - [-4, 3]
+    wall_width: 0.2
+    color: [0.1, 0.1, 0.1]
+
+  - name: closet
+    footprint:
+      type: polygon
+      coords:
+        - [0.5, 1.75]
+        - [2.25, 1.75]
+        - [2.25, 0.5]
+        - [4, 0.5]
+        - [4, 3]
+        - [0.5, 3]
+    wall_width: 0.2
+    color: [0.7, 0.4, 0.5]
+
+  - name: office
+    footprint:
+      type: polygon
+      coords:
+        - [0.5, -3]
+        - [4, -3]
+        - [4, -0.5]
+        - [2.25, -0.5]
+        - [2.25, -1.75]
+        - [0.5, -1.75]
+    wall_width: 0.2
+    color: [0.0, 0.0, 1.0]
+
 hallways:
-  - room_start: banana_farm
-    room_end: dining_room
-    width: 0.3
-    conn_method: auto
+  - room_start: dining
+    room_end: office
+    width: 0.6
+    conn_method: angle
+    conn_angle: -1.57
+    offset: 1.1
+    is_open: true
+    is_locked: false
+
+  - room_start: dining
+    room_end: closet
+    width: 0.6
+    conn_method: angle
+    conn_angle: 1.57
+    offset: -1.1
+    is_open: false
+    is_locked: false
+
+  - room_start: dining
+    room_end: trash
+    width: 0.6
+    conn_method: angle
+    conn_angle: 1.57
+    offset: 1.1
+    is_open: false
+    is_locked: false
+
+  - room_start: dining
+    room_end: kitchen
+    width: 0.6
+    conn_method: angle
+    conn_angle: -1.57
+    offset: -1.1
+    is_open: true
+    is_locked: false
+
+  - room_start: kitchen
+    room_end: trash
+    width: 0.8
+    conn_method: angle
+    conn_angle: 1.57
+    offset: 0.6
+    is_open: false
+    is_locked: false
+
+  - room_start: kitchen
+    room_end: office
+    width: 0.8
+    conn_method: angle
+    conn_angle: 0.0
+    offset: -0.5
+    is_open: false
+    is_locked: false
+
+  - room_start: closet
+    room_end: trash
+    width: 0.8
+    conn_method: angle
+    conn_angle: 3.14
+    offset: -0.5
+    is_open: false
+    is_locked: false
+
+  - room_start: closet
+    room_end: office
+    width: 0.8
+    conn_method: angle
+    conn_angle: -1.57
+    offset: 0.6
     is_open: false
     is_locked: false
 
 locations:
-  - name: table_source
-    parent: banana_farm
-    category: table
-    pose: [-1.5, 0.5]
-  - name: table_sink
-    parent: dining_room
-    category: table
-    pose: [1.5, 0.5]
+    - name: table
+      parent: dining
+      category: table
+      pose: [0.0, 0.15]
+
+    - name: desk
+      parent: office
+      category: desk
+      pose: [3.6, -2.3]
+
+    - name: fridge
+      parent: kitchen
+      category: storage
+      pose: [-3, -2.65]
+      is_open: false
+
+    - name: pantry
+      parent: kitchen
+      category: storage
+      pose: [-3.65, -1.5, 0.0, 1.57]
+      is_open: true
+
+    - name: bin
+      parent: office
+      category: trashcan_small
+      pose: [2.6, -0.85]
+      is_open: true
+
+    - name: dumpster
+      parent: trash
+      category: trashcan_large
+      pose: [-3.4, 2.4]
+      is_open: false
+
+    - name: charger
+      parent: closet
+      category: charger
+      pose: [3.5, 2.5, 0, -0.785]
+      is_charger: true
 
 objects:
-  - parent: table_source
-    category: banana
-    pose: [-1.5, 0.5]
+  - parent: pantry
+    category: bread
+
+  - parent: pantry
+    category: snacks
+
+  - parent: fridge
+    category: soda
+
+  - parent: fridge
+    category: butter
+
+  - parent: desk
+    category: waste
+
+  - parent: bin
+    category: waste
