add beta of flexbe behaviors (#21)
* add FlexBE dependencies
---------

Co-authored-by: Sebastian Castro <sebas.a.castro@gmail.com>
Co-authored-by: David Conner <robotics@cnu.edu>

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -10,19 +10,20 @@ RUN apt-get update && \
     apt-get install -y \
     apt-utils python3-pip python3-tk python3-wrapt python3-inflection \
     libegl1 libgl1-mesa-dev libglu1-mesa-dev '^libxcb.*-dev' libx11-xcb-dev \
-    libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libxrender-dev
+    libxi-dev libxkbcommon-dev libxkbcommon-x11-dev libxrender-dev \
+    libnss3 libasound2t64 libxkbfile1
 
 # Create a ROS 2 workspace.
 RUN mkdir -p /delib_ws/src/
 
 # Install external dependencies.
 WORKDIR /delib_ws
-COPY dependencies src/dependencies
-RUN source /opt/ros/jazzy/setup.bash && \
-    rosdep install --from-paths src -y --ignore-src
 # Aggregated Python dependencies
 COPY python-requirements.txt /delib_ws
 RUN pip3 install --break-system-packages -r python-requirements.txt
+COPY dependencies src/dependencies
+RUN source /opt/ros/jazzy/setup.bash && \
+    rosdep install --from-paths src -y --ignore-src
 # SkiROS2 dependencies
 RUN src/dependencies/SkiROS2/skiros2/skiros2/scripts/install_fd_task_planner.sh
 
