Add BehaviorTree.ROS2 submodule

--- a/.gitmodules
+++ b/.gitmodules
@@ -22,11 +22,14 @@
 	path = technologies/SkiROS2/skiros2_pyrobosim_lib
 	url = https://github.com/matthias-mayr/skiros2_pyrobosim_lib.git
 	branch = main
-[submodule "dependencies/FlexBE/flexbe_behavior_engine"]
+[submodule "flexbe_behavior_engine"]
 	path = dependencies/FlexBE/flexbe_behavior_engine
 	url = https://github.com/FlexBE/flexbe_behavior_engine.git
 	branch = ros2-devel
-[submodule "dependencies/FlexBE/flexbe_webui"]
+[submodule "flexbe_webui"]
 	path = dependencies/FlexBE/flexbe_webui
 	url = https://github.com/FlexBE/flexbe_webui.git
 	branch = main
+[submodule "BehaviorTree.ROS2"]
+	path = dependencies/BehaviorTree.CPP/BehaviorTree.ROS2
+	url = https://github.com/BehaviorTree/BehaviorTree.ROS2.git
