Specify branch name

--- a/.gitmodules
+++ b/.gitmodules
@@ -33,3 +33,4 @@
 [submodule "BehaviorTree.ROS2"]
 	path = dependencies/BehaviorTree.CPP/BehaviorTree.ROS2
 	url = https://github.com/BehaviorTree/BehaviorTree.ROS2.git
+	branch = humble
