preliminary implementation of Navigation

--- a/technologies/BehaviorTree.CPP/pyrobosim_btcpp/package.xml
+++ b/technologies/BehaviorTree.CPP/pyrobosim_btcpp/package.xml
@@ -9,8 +9,10 @@
 
   <buildtool_depend>ament_cmake</buildtool_depend>
 
+  <depend>ament_index_cpp</depend>
   <depend>behaviortree_ros2</depend>
   <depend>pyrobosim_msgs</depend>
+  <depend>rclcpp</depend>
 
   <test_depend>ament_lint_auto</test_depend>
   <test_depend>ament_lint_common</test_depend>
