--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -61,4 +61,13 @@ repos:
     hooks:
       - id: markdown-link-check
 
+  # CPP formatting
+  - repo: https://github.com/pre-commit/mirrors-clang-format
+    rev: v17.0.6
+    hooks:
+      - id: clang-format
+        types_or: [c++, c]
+        exclude: ^technologies/BehaviorTree.CPP/pyrobosim_btcpp/3rdparty
+        args: ['-fallback-style=none', '-i']
+
 exclude: '(dependencies|.colcon)/.*'
