--- a/problems/delib_ws_worlds/worlds/world4.yaml
+++ b/problems/delib_ws_worlds/worlds/world4.yaml
@@ -18,10 +18,9 @@ robots:
       type: constant_velocity
     path_planner:
       type: rrt
-      rrt_star: true
+      bidirectional: true
       max_connection_dist: 1.0
-      rewire_radius: 1.0
-      max_time: 3.0
+      max_time: 5.0
     action_execution_options:
       navigate:
         success_probability: 0.9
