Fix CURL command

--- a/.docker/Dockerfile
+++ b/.docker/Dockerfile
@@ -35,7 +35,7 @@ RUN source /opt/ros/jazzy/setup.bash && \
 RUN src/dependencies/SkiROS2/skiros2/skiros2/scripts/install_fd_task_planner.sh
 # Convince toolchain
 # (smc_storm)
-RUN curl -o https://github.com/convince-project/smc_storm/releases/download/0.0.3/smc_storm_executable.tar.gz && \
+RUN curl -O -L https://github.com/convince-project/smc_storm/releases/download/0.0.3/smc_storm_executable.tar.gz && \
     tar -xzf smc_storm_executable.tar.gz && \
     ./install.sh --install-dependencies && \
     ln -s /delib_ws/bin/smc_storm /usr/local/bin/smc_storm
