--- a/.gitmodules
+++ b/.gitmodules
@@ -34,3 +34,9 @@
 	path = dependencies/BehaviorTree.ROS2
 	url = https://github.com/BehaviorTree/BehaviorTree.ROS2.git
 	branch = humble
+[submodule "dependencies/convince/AS2FM"]
+	path = dependencies/convince/AS2FM
+	url = https://github.com/convince-project/AS2FM.git
+[submodule "dependencies/convince/bt_tools"]
+	path = dependencies/convince/bt_tools
+	url = https://github.com/boschresearch/bt_tools.git
