modify to use BSD-3 clause license; add run_btcpp_tree_state and pyrobosim_flexbe_btcpp executor; add HFSMBTH behavior; add copy of BT.cpp demo trees and change to unique tree name required by executor

--- a/technologies/FlexBE/pyrobosim_flexbe_states/package.xml
+++ b/technologies/FlexBE/pyrobosim_flexbe_states/package.xml
@@ -14,7 +14,7 @@
     </description>
     <author email="robotics@cnu.edu">David Conner</author>
     <maintainer email="robotics@cnu.edu">David Conner</maintainer>
-    <license>Apache 2</license>
+    <license>BSD-3</license>
 
     <exec_depend>rclpy</exec_depend>
     <exec_depend>flexbe_core</exec_depend>
