--- a/technologies/FlexBE/pyrobosim_flexbe_behaviors/package.xml
+++ b/technologies/FlexBE/pyrobosim_flexbe_behaviors/package.xml
@@ -11,7 +11,7 @@
     </description>
     <author email="robotics@cnu.edu">David Conner</author>
     <maintainer email="robotics@cnu.edu">David Conner</maintainer>
-    <license>Apache 2</license>
+    <license>BSD-3</license>
 
     <exec_depend>rclpy</exec_depend>
     <exec_depend>flexbe_behavior_engine</exec_depend>
