--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -13,9 +13,9 @@ jobs:
       - name: Check out code
         uses: actions/checkout@v4
       - name: Lint markdown files
-        uses: avto-dev/markdown-lint@v1.5.0
+        uses: DavidAnson/markdownlint-cli2-action@v17
         with:
-          args: README.md
+          globs: '**/*.md'
 
   pre-commit:
     name: Run pre-commit
