--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -55,11 +55,20 @@ repos:
         types: [text]
         files: \.(yml|yaml)$
 
+  # Finds issues in markdown files.
+  - repo: https://github.com/igorshubovych/markdownlint-cli
+    rev: v0.42.0
+    hooks:
+      - id: markdownlint
+        args: ["--fix"]
+        files: ./README.md
+
   # Checks links in markdown files.
   - repo: https://github.com/tcort/markdown-link-check
     rev: v3.12.2
     hooks:
       - id: markdown-link-check
+        files: ./README.md
 
   # CPP formatting
   - repo: https://github.com/pre-commit/mirrors-clang-format
