--- a/.github/workflows/lint.yml
+++ b/.github/workflows/lint.yml
@@ -15,7 +15,7 @@ jobs:
       - name: Lint markdown files
         uses: DavidAnson/markdownlint-cli2-action@v17
         with:
-          globs: ./README.md
+          globs: "./*.md\ndependencies/*.md\nproblems/**/*.md\ntechnologies/**/*.md"
 
   pre-commit:
     name: Run pre-commit
