--- a/.pre-commit-config.yaml
+++ b/.pre-commit-config.yaml
@@ -56,12 +56,11 @@ repos:
         files: \.(yml|yaml)$
 
   # Finds issues in markdown files.
-  - repo: https://github.com/igorshubovych/markdownlint-cli
-    rev: v0.42.0
+  - repo: https://github.com/DavidAnson/markdownlint-cli2
+    rev: v0.14.0
     hooks:
-      - id: markdownlint
+      - id: markdownlint-cli2
         args: ["--fix"]
-        files: ./README.md
 
   # Checks links in markdown files.
   - repo: https://github.com/tcort/markdown-link-check
