--- a/.markdownlint-cli2.yaml
+++ b/.markdownlint-cli2.yaml
@@ -3,7 +3,7 @@ fix: true
 
 # Define glob expressions to use
 globs:
-  - "**/README.md"
+  - "**README.md"
 
 # Define glob expressions to ignore
 ignores:
