--- a/.gitmodules
+++ b/.gitmodules
@@ -4,11 +4,11 @@
 	branch = main
 [submodule "skiros2"]
 	path = dependencies/SkiROS2/skiros2
-	url = https://github.com/RVMI/skiros2
+	url = https://github.com/RobotlabLTH/skiros2
 	branch = fix/ros2_jazzy_build
 [submodule "skiros2_std_lib"]
 	path = dependencies/SkiROS2/skiros2_std_lib
-	url = https://github.com/RVMI/skiros2_std_lib
+	url = https://github.com/RobotlabLTH/skiros2_std_lib
 	branch = ros2
 [submodule "ros2_ros_bt_py"]
 	path = dependencies/ros_bt_py/ros2_ros_bt_py
