--- a/problems/delib_ws_problem_interface/package.xml
+++ b/problems/delib_ws_problem_interface/package.xml
@@ -5,7 +5,7 @@
   <version>1.0.0</version>
   <description>Problem interface for ROS 2 Deliberation Workshop</description>
   <maintainer email="christian.henkel2@de.bosch.com">hec2le</maintainer>
-  <license>Apache-2.0</license>
+  <license>BSD-3-Clause</license>
 
   <depend>rclpy</depend>
   <depend>pyrobosim_msgs</depend>
