--- a/problems/delib_ws_python/package.xml
+++ b/problems/delib_ws_python/package.xml
@@ -5,7 +5,7 @@
   <version>1.0.0</version>
   <description>Simple Python solutions to ROS 2 Deliberation Workshop</description>
   <maintainer email="christian.henkel2@de.bosch.com">Christian Henkel</maintainer>
-  <license>Apache-2.0</license>
+  <license>BSD-3-Clause</license>
 
   <depend>rclpy</depend>
   <depend>delib_ws_problem_interface</depend>
